[HVHA-5] Delete appnet
- Delete appnet by removing Address Book
- Add Delete API
